# rusty-squares

./: Cargo.toml  README.md
.cargo/: config.toml
src/: centred_cursor.rs  game.rs  main.rs
